FE, BE : Fixing like feature on thread
